--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -7,9 +7,26 @@
 *  ----------------------------------------------------------------
 */
 
-@import './_config/_index.less';
-@import './_layout/_index.less';
-@import './_themes/_index.less';
-@import './_fonts/_index.less';
-@import './_animations/_index.less';
+// ---------------------------------------------------------------- //
+// -- @Import's for module's.less 
+// ---------------------------------------------------------------- //
+    
+    // Libs
+        @import './_lib/flexbox.less';
+        
+    // Config
+        @import './config/_index.less';
 
+    // Layout
+        @import './layout/_index.less';
+
+    // Fonts
+        //@import './fonts/_index.less';
+
+    // Components
+        //@import './components/_index.less';
+
+    // Animations
+        //@import './animations/_index.less';
+
+// ---------------------------------------------------------------- //
